# NJU_SE_PhotoWaterMark

./: README.md  analyze_file_times.py  check_exif.py  create_test_image.py  pyproject.toml  requirements_specification.md  作业要求.md
.claude/: settings.local.json
config/: default_config.yaml
docs/: SRS.md  requirements.txt
samples/: README.md
src/: __init__.py  main.py
src/exif_reader/: __init__.py  exif_reader.py
src/utils/: __init__.py  config.py  logger.py
src/watermark/: __init__.py  watermark_processor.py
tests/: test_exif_reader.py  test_watermark_processor.py
